Conversion service improvements (#9770)
* Conversion service improvements

* Javadoc

* Improve

* Remove duplicates

* Remove duplicates

* Improve

* Progress

* Correct

* Correct

* Improve hierarchy lookup

* Improve

* Improve

* Correct

* Correct